typescript/checker/tests/conformance/scanner/ecmascript5/scannerNumericLiteral2.ts.stderr
error: TS1085
 --> $DIR/tests/conformance/scanner/ecmascript5/scannerNumericLiteral2.ts:2:1
  |
2 | 01
  | ^^

